--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
